bugfixes mermaid: layout (add div) bugfixes mermaid: process only if visible, make id unique

--- a/src/main/resources/static/yaio-explorerapp/css/print-dataonly.css
+++ b/src/main/resources/static/yaio-explorerapp/css/print-dataonly.css
@@ -72,10 +72,14 @@ div.container-content-desc img:not([class]) {
     height: auto;
 }
 div.container-content-desc svg:not([class]) {
-    max-width: 500px;
-    width: auto;
-    max-height: 300px;
+    width: 100%;
     height: auto;
+}
+div.mermaid {
+    max-width: 500px;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 
