--- a/src/main/resources/static/yaio-explorerapp/css/style.css
+++ b/src/main/resources/static/yaio-explorerapp/css/style.css
@@ -326,6 +326,17 @@ ul.nodecommands {
     width: 1050px;
     height: 650px;
 }
+#preview-content svg:not([class]) {
+    width: 100%;
+    height: auto;
+}
+
+#preview-content div.mermaid {
+    max-width: 950px;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 
 /*****************************************
@@ -339,6 +350,17 @@ ul.nodecommands {
     height: 600px;
     overflow: auto;
     padding-left: 10px;
+}
+#wysiwhg-preview svg:not([class]) {
+    width: 100%;
+    height: auto;
+}
+
+#wysiwhg-preview div.mermaid {
+    max-width: 550px;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 #wysiwhg-editor {
     float: left;
@@ -1020,15 +1042,16 @@ div.container-content-desc img:not([class]) {
     margin-right: auto;
 }
 div.container-content-desc svg:not([class]) {
-    max-width: 1000px;
-    width: auto;
-    max-height: 700px;
+    width: 100%;
     height: auto;
-    display: block;
+}
+
+div.container-content-desc div.mermaid {
+    max-width: 1000px;
+    height: auto;
     margin-left: auto;
     margin-right: auto;
 }
-
 .pre-wrap {
     white-space: normal;
     white-space: -moz-pre-line;
@@ -1231,10 +1254,14 @@ div.container-content-desc svg:not([class]) {
     height: auto;
 }
 #front-content-intro svg:not([class]) {
-    max-width: 600px;
-    width: auto;
+    width: 100%;
     height: auto;
-    height: 400px;
+}
+#front-content-intro div.mermaid {
+    max-width: 600px;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 #front-content-intro .boxline-ue3 {
     color: #ff9933;
